; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_backref.c_init_ipath.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_backref.c_init_ipath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode_fs_paths = type { %struct.btrfs_root*, %struct.btrfs_data_container*, %struct.btrfs_path* }
%struct.btrfs_data_container = type { i32 }
%struct.btrfs_root = type { i32 }
%struct.btrfs_path = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.inode_fs_paths* @init_ipath(i32 %0, %struct.btrfs_root* %1, %struct.btrfs_path* %2) #0 {
  %4 = alloca %struct.inode_fs_paths*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.btrfs_root*, align 8
  %7 = alloca %struct.btrfs_path*, align 8
  %8 = alloca %struct.inode_fs_paths*, align 8
  %9 = alloca %struct.btrfs_data_container*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.btrfs_root* %1, %struct.btrfs_root** %6, align 8
  store %struct.btrfs_path* %2, %struct.btrfs_path** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.btrfs_data_container* @init_data_container(i32 %10)
  store %struct.btrfs_data_container* %11, %struct.btrfs_data_container** %9, align 8
  %12 = load %struct.btrfs_data_container*, %struct.btrfs_data_container** %9, align 8
  %13 = call i64 @IS_ERR(%struct.btrfs_data_container* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load %struct.btrfs_data_container*, %struct.btrfs_data_container** %9, align 8
  %17 = call %struct.inode_fs_paths* @ERR_CAST(%struct.btrfs_data_container* %16)
  store %struct.inode_fs_paths* %17, %struct.inode_fs_paths** %4, align 8
  br label %40

18:                                               ; preds = %3
  %19 = load i32, i32* @GFP_KERNEL, align 4
  %20 = call %struct.inode_fs_paths* @kmalloc(i32 24, i32 %19)
  store %struct.inode_fs_paths* %20, %struct.inode_fs_paths** %8, align 8
  %21 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %8, align 8
  %22 = icmp ne %struct.inode_fs_paths* %21, null
  br i1 %22, label %29, label %23

23:                                               ; preds = %18
  %24 = load %struct.btrfs_data_container*, %struct.btrfs_data_container** %9, align 8
  %25 = call i32 @kvfree(%struct.btrfs_data_container* %24)
  %26 = load i32, i32* @ENOMEM, align 4
  %27 = sub nsw i32 0, %26
  %28 = call %struct.inode_fs_paths* @ERR_PTR(i32 %27)
  store %struct.inode_fs_paths* %28, %struct.inode_fs_paths** %4, align 8
  br label %40

29:                                               ; preds = %18
  %30 = load %struct.btrfs_path*, %struct.btrfs_path** %7, align 8
  %31 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %8, align 8
  %32 = getelementptr inbounds %struct.inode_fs_paths, %struct.inode_fs_paths* %31, i32 0, i32 2
  store %struct.btrfs_path* %30, %struct.btrfs_path** %32, align 8
  %33 = load %struct.btrfs_data_container*, %struct.btrfs_data_container** %9, align 8
  %34 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %8, align 8
  %35 = getelementptr inbounds %struct.inode_fs_paths, %struct.inode_fs_paths* %34, i32 0, i32 1
  store %struct.btrfs_data_container* %33, %struct.btrfs_data_container** %35, align 8
  %36 = load %struct.btrfs_root*, %struct.btrfs_root** %6, align 8
  %37 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %8, align 8
  %38 = getelementptr inbounds %struct.inode_fs_paths, %struct.inode_fs_paths* %37, i32 0, i32 0
  store %struct.btrfs_root* %36, %struct.btrfs_root** %38, align 8
  %39 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %8, align 8
  store %struct.inode_fs_paths* %39, %struct.inode_fs_paths** %4, align 8
  br label %40

40:                                               ; preds = %29, %23, %15
  %41 = load %struct.inode_fs_paths*, %struct.inode_fs_paths** %4, align 8
  ret %struct.inode_fs_paths* %41
}

declare dso_local %struct.btrfs_data_container* @init_data_container(i32) #1

declare dso_local i64 @IS_ERR(%struct.btrfs_data_container*) #1

declare dso_local %struct.inode_fs_paths* @ERR_CAST(%struct.btrfs_data_container*) #1

declare dso_local %struct.inode_fs_paths* @kmalloc(i32, i32) #1

declare dso_local i32 @kvfree(%struct.btrfs_data_container*) #1

declare dso_local %struct.inode_fs_paths* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
